--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="game.css"/>
-        
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>
     <body>
         <header>
-            <div id="button"><p onclick="timer(25)">Start</p></div>
+            <div id="button"><p onclick="timer(25);removeInstructions();levelOne()">Start</p></div>
             <div id="timer"></div>
             <div id="level"></div>
         </header>
         <div id="arena">
+            <p id="instructions">
+                Click on each circle in order, starting with 1.  You have 25 seconds to
+                click on each circle.  Level 1 begins when you click start.
+            </p>
             
         </div>
         <script src="js/game.js"></script>
-    </body>
+    </body> 
 </html>
 
 
